# speechtotext

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
constraints/: windows-cpu.txt
docs/: audio-evaluation.md  benchmark-turboscribe.md
docs/superpowers/plans/: 2026-07-07-diarizacion-identificacion-batch.md  2026-07-07-find-buscador-segmento.md  2026-07-08-transcripcion-chunked.md
docs/superpowers/specs/: 2026-07-07-diarizacion-identificacion-batch-design.md  2026-07-07-find-buscador-segmento-design.md  2026-07-08-transcripcion-chunked-design.md
scripts/: smoke_diarize.py
src/: api.py  main.py
src/speechtotext/: __init__.py  statistics.py
src/speechtotext/api/: __init__.py  app.py  azure_client.py  config.py  schemas.py
src/speechtotext/api/routes/: __init__.py  health.py  pronunciation.py
src/speechtotext/asr/: __init__.py  base.py  faster_whisper.py  types.py
src/speechtotext/audio/: __init__.py  fingerprint.py  gate.py  io.py  level.py  quality.py  types.py
src/speechtotext/cli/: __init__.py  app.py
src/speechtotext/confidence/: __init__.py  calibration.py  features.py  runtime.py
src/speechtotext/core/: audio.py  chunked.py  finder.py  formats.py  postprocess.py  segments.py
src/speechtotext/evaluation/: __init__.py  __main__.py  environment.py  filesystem.py  manifest.py  metrics.py  privacy.py  retention.py  runner.py  splits.py  training.py
src/speechtotext/models/: __init__.py  filesystem.py  manifest.py
src/speechtotext/security/: __init__.py  __main__.py  artifacts.py
src/speechtotext/speakers/: diarization.py  identify.py  registry.py
tests/: conftest.py  test_asr_contract.py  test_audio_io.py  test_audio_level.py  test_audio_quality.py  test_audio_types.py  test_calibration.py  test_calibration_training.py  test_chunked.py  test_cli.py  test_cli_find.py  test_confidence_features.py  test_diarization_models.py  test_diarization_pure.py  test_environment.py  test_evaluation_cli.py  test_evaluation_filesystem_windows.py  test_evaluation_manifest.py  test_evaluation_metrics.py  test_evaluation_retention.py  test_evaluation_runner.py  test_evaluation_splits.py  test_faster_whisper_backend.py  test_finder.py  test_finder_index.py  test_formats_speaker.py  test_hotwords.py  test_identify.py  test_model_filesystem_windows.py  test_model_manifest.py  test_pipeline_fingerprint.py  test_postprocess.py  test_pre_inference_gate.py  test_private_artifacts.py  test_private_artifacts_cli.py  test_private_artifacts_windows.py  test_registry.py  test_segments.py  test_speakers.py  test_statistics_runtime.py  (+3 more)
