[project]
name = "speechtotext"
version = "0.3.0"
description = "Transcripción offline con faster-whisper y servicio HTTP de evaluación de pronunciación con Azure AI Speech."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "speech-to-text",
    "whisper",
    "faster-whisper",
    "asr",
    "pronunciation",
    "pronunciation-assessment",
    "azure",
    "language-learning",
    "fastapi",
    "offline",
]
dependencies = [
    "faster-whisper>=1.0.3",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "azure-cognitiveservices-speech>=1.40.0",
]
diarize = [
    "pyannote.audio>=3.1",
    "numpy>=1.24",
    "torch>=2.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
speechtotext = "speechtotext.cli.app:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
