[project]
name = "speechtotext"
version = "0.3.0"
description = "Transcripción offline con faster-whisper y servicio HTTP de evaluación de pronunciación con Azure AI Speech."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "speech-to-text",
    "whisper",
    "faster-whisper",
    "asr",
    "pronunciation",
    "pronunciation-assessment",
    "azure",
    "language-learning",
    "fastapi",
    "offline",
]
dependencies = [
    "faster-whisper>=1.2,<1.3",
    "typer>=0.26,<0.27",
    "rich>=15,<16",
    "numpy>=2,<3",
    "av>=18,<19",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "azure-cognitiveservices-speech>=1.40.0",
]
diarize = [
    "pyannote.audio>=4.0",
    "torch>=2.0",
]
evaluation = [
    "scikit-learn>=1.9,<2",
    "scipy>=1.17.1,<1.18",
]
dev = [
    "hypothesis>=6.156,<7",
    "pytest>=9,<10",
]

[project.scripts]
speechtotext = "speechtotext.cli.app:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
